5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1800_2572.log
== SUBMITION (2019-06-12 19:53:40) 
-- CODE:
from numpy import*
mat= arra(eval(input("vet")))
w=0
for i in range(size(mat)):
	if(mat[i]%2!=0):
		w=w+1
x=zeros(w,dtype=int)
p=0
for k in range(size(mat)):
	if(mat[k]%2!=0):
		x[p]=mat[k]
		p=p+1
print(x)
-- EXECUTION TIME:
1.15317
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 2, in <module>
    mat= arra(eval(input()))
NameError: name 'arra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:54:40) 
-- CODE:
from numpy import*
mat= arra(eval(input("vet")))
w=0
for i in range(size(mat)):
	if(mat[i]%2!=0):
		w=w+1
x=zeros(w,dtype=int)
p=0
for k in range(size(mat)):
	if(mat[k]%2!=0):
		x[p]=mat[k]
		p=p+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:54:53) 
-- CODE:
from numpy import*
mat= arra(eval(input("vet")))
w=0
for i in range(size(mat)):
	if(mat[i]%2!=0):
		w=w+1
x=zeros(w,dtype=int)
p=0
for k in range(size(mat)):
	if(mat[k]%2!=0):
		x[p]=mat[k]
		p=p+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:55:05) 
-- CODE:
from numpy import*
mat= array(eval(input("vet")))
w=0
for i in range(size(mat)):
	if(mat[i]%2!=0):
		w=w+1
x=zeros(w,dtype=int)
p=0
for k in range(size(mat)):
	if(mat[k]%2!=0):
		x[p]=mat[k]
		p=p+1
print(x)
-- EXECUTION TIME:
1.09704
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
